crates/mandala-tui/tests/snapshots/harness__snapshot_concurrent_jobs_spinner_line.snap
---
source: crates/mandala-tui/tests/harness.rs
expression: terminal.backend()
---
"mandala — fleet                                                                                     "
" members │ groups │ drift                                                                           "
"┌ members ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│  member           platform   arch             category   role       tags                      ads│"
"│  cache            metal      x86_64-linux     ?          -                                    ---│"
"│  router           opnsense   ?                ?          -                                    ---│"
"│  web              metal      x86_64-linux     server     web        edge                      ad-│"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"⠋ running   eval   ·   survey (2 read)                                                              "
"tab views  ·  space select  ·  shift+drag terminal select  ·  r reload  ·  S refresh drift  ·  p pin"
