crates/mandala-tui/tests/snapshots/harness__snapshot_demo_idle.snap
---
source: crates/mandala-tui/tests/harness.rs
expression: terminal.backend()
---
"┌mandala demo────────────────────────────────────┐"
"│name         role         st                    │"
"│alpha        controller   ✔                     │"
"│beta         worker       ≠                     │"
"│gamma        edge         ?                     │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"ready — j/k move · s job · q quit                 "
