crates/mandala-tui/tests/snapshots/harness__snapshot_drift_view_with_expected_caption.snap
---
source: crates/mandala-tui/tests/harness.rs
expression: terminal.backend()
---
"mandala — fleet                                                                                                         "
" members │ groups │ drift                                                                                               "
"┌ drift ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  member           status         current            expected           booted             captured                   │"
"│  cache            drift          curcache-toplevel  expcache-toplevel  curcache-toplevel  2026-06-12T11:59:00        │"
"│  web              in-sync        curweb00-toplevel  curweb00-toplevel  curweb00-toplevel  2026-06-12T11:59:00        │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│S refresh drift (survey + eval) · R reboot a reboot-pending row   expected @ aaaaaaaaaaa                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"drift refreshed                                                                                                         "
"tab views  ·  space select  ·  shift+drag terminal select  ·  r reload  ·  S refresh drift  ·  p ping  ·  R reboot  ·  D"
