crates/mandala-tui/tests/snapshots/harness__snapshot_groups_view.snap
---
source: crates/mandala-tui/tests/harness.rs
expression: terminal.backend()
---
"mandala — fleet                                                                 "
" members │ groups │ drift                                                       "
"┌ groups ──────────────────────────────────────────────────────────────────────┐"
"│  group            n    members                                               │"
"│  gateway          1    router                                                │"
"│  k3s              2    cache web                                             │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"3 members, 2 groups — space/shift+↑↓ select · p ping · R reboot · D deploy      "
"tab views  ·  space select  ·  shift+drag terminal select  ·  r reload  ·  S ref"
