crates/mandala-tui/tests/snapshots/harness__snapshot_members_view.snap
---
source: crates/mandala-tui/tests/harness.rs
expression: terminal.backend()
---
"mandala — fleet                                                                                     "
" members │ groups │ drift                                                                           "
"┌ members ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│  member           platform   arch             category   role       tags                      ads│"
"│● cache            metal      x86_64-linux     ?          -                                    ---│"
"│  router           opnsense   ?                ?          -                                    ---│"
"│  web              metal      x86_64-linux     server     web        edge                      ad-│"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"3 members, 2 groups — space/shift+↑↓ select · p ping · R reboot · D deploy                          "
"tab views  ·  space select  ·  shift+drag terminal select  ·  r reload  ·  S refresh drift  ·  p pin"
