crates/mandala-tui/tests/snapshots/harness__snapshot_working_status_with_cursor_moved.snap
---
source: crates/mandala-tui/tests/harness.rs
expression: terminal.backend()
---
"┌mandala demo────────────────────────────────────┐"
"│name         role         st                    │"
"│alpha        controller   ✔                     │"
"│beta         worker       ≠                     │"
"│gamma        edge         ?                     │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
"⠹ evaluating expected                             "
